// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReModal component should render with all props 1`] = `
<ReDialog-stub
  class="__CLASS__"
  classdialog="re-modal,__CONTENT-CLASS__"
  overlay="true"
  overlayclose="true"
  size="auto"
  transition="expand"
  verticalalign="middle"
>
  <header
    class="re-modal__header"
  >
    <span
      class="re-modal__close"
      tabindex="0"
    >
      <icclose-stub
        additionalclass=""
        class="re-modal__close-icon"
      />
    </span>

    <div
      class="re-modal__title-container"
    >
      <h2
        class="re-modal__title"
      >

          __TITLE__

      </h2>
    </div>

    <span
      class="re-modal__action"
      tabindex="0"
    />
  </header>

  <p
    class="re-modal__description"
  >

      __DESCRIPTION__

  </p>

  <main
    class="re-modal__content"
  >
    __MODAL-CONTENT__
  </main>

  <!---->
</ReDialog-stub>
`;

exports[`ReModal component should render with required props 1`] = `
<ReDialog-stub
  class="__CLASS__"
  classdialog="re-modal,__CONTENT-CLASS__"
  overlay="true"
  overlayclose="true"
  size="auto"
  transition="expand"
  verticalalign="middle"
>
  <header
    class="re-modal__header"
  >
    <span
      class="re-modal__close"
      tabindex="0"
    >
      <icclose-stub
        additionalclass=""
        class="re-modal__close-icon"
      />
    </span>

    <div
      class="re-modal__title-container"
    >
      <h2
        class="re-modal__title"
      >

          __TITLE__

      </h2>
    </div>

    <span
      class="re-modal__action"
      tabindex="0"
    />
  </header>

  <p
    class="re-modal__description"
  >

      __DESCRIPTION__

  </p>

  <main
    class="re-modal__content"
  >
    __MODAL-CONTENT__
  </main>

  <!---->
</ReDialog-stub>
`;

exports[`ReModal component using custom slots 1`] = `
<ReDialog-stub
  class="__CLASS__"
  classdialog="re-modal,__CONTENT-CLASS__"
  overlay="true"
  overlayclose="true"
  size="auto"
  transition="expand"
  verticalalign="middle"
>
  <header
    class="re-modal__header re-modal__header--with-actions"
  >
    <span
      class="re-modal__close"
      tabindex="0"
    >
      <button>
        __CLOSE__
      </button>
    </span>

    <div
      class="re-modal__title-container"
    >
      <h2>
        __TITLE__
      </h2>
    </div>

    <span
      class="re-modal__action"
      tabindex="0"
    >
      <button>
        __ACTION__
      </button>
    </span>
  </header>

  <p
    class="re-modal__description"
  >
    <b>
      __CUSTOM-DESCRIPTION
    </b>
  </p>

  <main
    class="re-modal__content"
  >
    __MODAL-CONTENT__
  </main>

  <div
    class="re-modal__footer"
  >
    <div>
      __FOOTER__
    </div>
  </div>
</ReDialog-stub>
`;
